💄 Fix: adjust alignment and height in ReplyLikeInfo styles

--- a/app/post/[id]/css/ReplyLikeInfo.module.css
+++ b/app/post/[id]/css/ReplyLikeInfo.module.css
@@ -13,13 +13,13 @@
 
 .count {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   gap: 0.125rem;
 }
 
 .like_icon {
   width: 24px;
-  height: 24px;
+  height: 27px;
   cursor: pointer;
 }
